MDEV-5814: MySQL Bug#13948247 DIVISION BY 0 IN GET_BEST_DISJUNCT_QUICK WITH FORCE INDEX GROUP BY - Adopt MySQL's fix: don't run index_merge optimizer if the table statistics   reports that the table has 0 rows.